# whitney-museum-mcp

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  client.py  mcp_tools.py  tools.py
tests/: test_api_tools.py  test_example_tools.py  test_smoke_live.py
