[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-template"
version = "0.1.0"
description = "MCP Server Template - Model Context Protocol server scaffold for building custom MCP servers"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.6",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.292",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    ".venv",
    "__pycache__",
    ".git",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mcp_server_template"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**" = ["E501"]
"main.py" = ["E501", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep coverage wired but with threshold 0 until tests exist.
# Raise to 80 later.
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets.*",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
